--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
-            <div data-previous-current class="current-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
-        <button data-operation>DEL</button>
-        <button data-operation>/</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
         <button data-number>1</button>
         <button data-number>2</button>
         <button data-number>3</button>
